datepicker dates are not aligned properly - fixed (#7391)

--- a/frontend/src/_styles/table-component.scss
+++ b/frontend/src/_styles/table-component.scss
@@ -135,8 +135,8 @@
     overflow-x: hidden !important;
   }
 
-  td {
-    padding: 6px 12px;
+  .td {
+    // padding: 6px 12px;
     .text-container:focus-visible,
     .text-container:focus,
     .text-container:focus-within,
